  (see the "API changes" section) and now should work correctly on
  non-conforming AMR meshes. Example 10 and its SUNDIALS version have also been
  updated to support non-conforming ARM meshes.

Miscellaneous
-------------
- Documented project workflow and provided contribution guidelines in the new
  top-level file, CONTRIBUTING.md.

- Added a new developer tool, config/sample-runs.sh, that extracts the sample
  runs from all examples and miniapps and runs them. Optionally, it can save the
  output from the execution to files, allowing comparison between different
  versions and builds of the library.

- Add support for building a shared version of the MFEM library with GNU make.

- When building with the GnuTLS library, switch to using X.509 certificates for
  secure socket authentication. Support for the previously used OpenPGP keys has
  been deprecated in GnuTLS 3.5.x and removed in 3.6.0. For secure communication
  with the visualization tool GLVis, a new set of certificates can be generated
  using the latest version of the script 'glvis-keygen.sh' from GLVis.

- Upgraded MFEM to support Axom 0.2.8. Prior versions are no longer supported.

API changes
-----------
- Introduced a new enum, Matrix::DiagonalPolicy, that replaces the integer
  parameters in many methods that perform elimination of rows and/or columns in
  matrices. Some examples of such methods are:
  * class SparseMatrix: EliminateRow(), EliminateCol(), EliminateRowCol(), ...
  * class BilinearForm: EliminateEssentialBC(), EliminateVDofs(), ...
  * class StaticCondensation: EliminateReducedTrueDofs()
  * class BlockMatrix: EliminateRowCol()
  Calling these methods with an explicitly given (integer) constants, will now
  generate compilation errors, please use one of the new enum constants instead.

- Modified the virtual method AbstractSparseMatrix::EliminateZeroRows() and its
  implementations in derived classes, to accept an optional 'threshold'